--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Marching Arts Archive</title>
+
+        <title>Marching Arts Archive - Preserving marching arts history and media.</title>
         <link href="https://marchingartsarchive.org" rel="canonical" />
+        <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet" />
         <style>
             html,
             body {
@@ -22,9 +25,10 @@
                 font-family: "Ubuntu", sans-serif;
 
                 color: white;
+                font-size: 14pt;
 
                 background-color: #07070d;
-                background-image: url(ticks.svg);
+                background-image: url(/ticks.svg);
                 background-size: 10rem;
                 background-position: center;
             }
@@ -37,18 +41,20 @@
             }
 
             .big-title {
-                font-weight: 700;
                 font-size: 35pt;
                 margin-bottom: 2rem;
             }
 
-            .text {
-                font-size: 14pt;
-                font-weight: 500;
-            }
-
             .center-text {
                 text-align: center;
+            }
+
+            .bold-text {
+                font-weight: 700;
+            }
+
+            .mb-3 {
+                margin-bottom: 3rem;
             }
 
             ul.contact-list {
@@ -60,7 +66,7 @@
                 flex-direction: column;
                 align-items: center;
 
-                font-weight: 300;
+                font-weight: 400;
             }
 
             a:link,
@@ -75,10 +81,11 @@
     </head>
     <body>
         <main>
-            <h1 class="big-title center-text">Marching Arts Archive</h1>
-            <p class="text center-text">Our website is still under development.</p>
-            <div class="text center-text" style="margin-top: 3rem">
-                <p style="margin-bottom: 0.9rem">Contact us:</p>
+            <h1 class="big-title center-text bold-text">Marching Arts Archive</h1>
+            <p class="mb-3 center-text bold-text">Preserving marching arts history and media.</p>
+            <p class="mb-3 center-text">Our website is still under development.</p>
+            <div class="center-text">
+                <p class="bold-text" style="margin-bottom: 0.9rem">Contact us:</p>
                 <ul class="contact-list">
                     <li><a href="mailto:marchingartsarchive@protonmail.com">marchingartsarchive@protonmail.com</a></li>
                     <li><a href="https://www.instagram.com/marchingartsarchive/">@marchingartsarchive</a></li>
