--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
         <title>Marching Arts Archive - Preserving marching arts history and media.</title>
+        <link rel="sitemap" type="application/xml" title="Sitemap" href="https://marchingartsarchive.org/sitemap.xml" />
         <link href="https://marchingartsarchive.org" rel="canonical" />
         <link rel="icon" type="image/x-icon" href="/favicon.ico" />
 
