--- a/404.html
+++ b/404.html
@@ -5,9 +5,10 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Page not found</title>
-        <meta http-equiv="refresh" content="3; url=https://marchingartsarchive.org/" />
+        <link rel="canonical" href="https://marchingartsarchive.org" />
+        <meta http-equiv="refresh" content="3; url=https://marchingartsarchive.org" />
     </head>
     <body>
-        <p>This page does not exist. Redirecting to the <a href="https://marchingartsarchive.org/">home page</a>...</p>
+        <p>This page does not exist. Redirecting to the <a href="https://marchingartsarchive.org">home page</a>...</p>
     </body>
 </html>
